// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-postcss Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: build-html / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: build-javascript / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: develop / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`gatsby-plugin-postcss Stage: develop-html / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-html / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: build-javascript / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": true,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;

exports[`onCreateWebpackConfig Stage: develop-html / PostCss options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.css\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css-loader({\\"modules\\":true,\\"importLoaders\\":1})",
                    Object {
                      "loader": "postcss-loader",
                      "options": Object {
                        "plugins": Array [
                          "autoprefixer",
                        ],
                        "sourceMap": false,
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.css\\$/,
                  "use": Array [
                    "null-loader",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
}
`;
